--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,7 +30,7 @@ bind-key    -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to
 bind-key p paste-buffer
 
 # wifiとバッテリーの残量を表示
-set-option -g status-right '#(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
+set-option -g status-right ' #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
 
 # 色をキレイな緑に
-set-option -g status-bg "colour172"
+set-option -g status-bg "colour33"
