--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,13 +5,13 @@ setw -g mouse on
 set -g default-terminal "screen-256color"
 
 # ウィンドウリストの色を設定する
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
+#setw -g window-status-fg cyan
+#setw -g window-status-bg default
+#setw -g window-status-attr dim
 # アクティブなウィンドウを目立たせる
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+#setw -g window-status-current-fg white
+#setw -g window-status-current-bg red
+#setw -g window-status-current-attr bright
 
 # 縦棒で縦分割,横棒で横分割
 bind | split-window -h
