make .tmux.conf conditional to OS

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,7 @@ bind - split-window -v
 set-window-option -g mode-keys vi
 
 # Prefix+v でコピーモード開始
-set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"
+if-shell "uname | grep -q Darwin" 'set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"'
 bind-key    -T copy-mode-vi v     send-keys -X begin-selection
 bind-key    -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 bind-key    -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
@@ -34,3 +34,6 @@ set-option -g status-right ' #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
 
 # 色をキレイな緑に
 set-option -g status-bg "colour33"
+
+# OS specific settings
+#if-shell "uname | grep -q Darwin" "source-file .tmux.conf.osx"
