Add: move pain with vi-key-bind

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,14 @@ setw -g mouse on
 
 # bindkey の設定
 set -g prefix C-t
+unbind C-b
+
+# vimのキーバインドでペインを移動する
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 
 # 256色端末を使用する
 set -g default-terminal "screen-256color"
