Add: history-limit to 10000

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,5 +46,7 @@ set-option -g status-right ' #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
 # 色をキレイな緑に
 set-option -g status-bg "colour33"
 
+set-option -g history-limit 10000
+
 # OS specific settings
 #if-shell "uname | grep -q Darwin" "source-file .tmux.conf.osx"
