Remove: code that is not working

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,8 +40,7 @@ bind-key    -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to
 # クリップボードにも保存されているので Cmd-v でもペースト可能
 bind-key p paste-buffer
 
-# wifiとバッテリーの残量を表示
-set-option -g status-right ' #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
+set-option -g status-right '[%Y-%m-%d(%a) %H:%M]'
 
 # 色をキレイな緑に
 set-option -g status-bg "colour33"
