Improve: remove obsolete options and Add current-window-highlight

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,11 +15,7 @@ bind l select-pane -R
 # 256色端末を使用する
 set -g default-terminal "screen-256color"
 
-# アクティブなウィンドウを目立たせる
-#setw -g window-status-current-fg white
-#setw -g window-status-current-bg red
-#setw -g window-status-current-attr bright
-
+set-window-option -g window-status-current-style bg=green
 
 # 縦棒で縦分割,横棒で横分割
 bind | split-window -h
