--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -59,6 +59,7 @@ cask "deepl"
 cask "discord"
 cask "firefox"
 cask "google-chrome"
+cask "hammerspoon"
 cask "iterm2"
 cask "karabiner-elements"
 cask "mactex-no-gui"
@@ -66,11 +67,10 @@ cask "mono-mdk-for-visual-studio"
 cask "slack"
 cask "tor-browser"
 cask "visual-studio-code"
+cask "vlc"
 cask "webex-meetings"
 cask "wireshark"
 cask "zoom"
-cask "vlc"
-cask "shiftit"
 mas "LINE", id: 539883307
 mas "Snippety", id: 1530751461
 mas "WireGuard", id: 1451685025
