--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -44,6 +44,7 @@ brew "python@3.8"
 brew "reattach-to-user-namespace"
 brew "rename"
 brew "speedtest-cli"
+brew "sshuttle"
 brew "telnet"
 brew "tldr"
 brew "tmux"
