--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -69,6 +69,7 @@ cask "slack"
 cask "tor-browser"
 cask "visual-studio-code"
 cask "vlc"
+cask "webex"
 cask "webex-meetings"
 cask "wireshark"
 cask "zoom"
