IMPROVE: add ('Ctrl+t'x2|Ctrl+o) to move pain

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,8 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind -n C-o select-pane -t :.+
+bind C-t select-pane -t :.+
 
 # 256色端末を使用する
 set -g default-terminal "screen-256color"
