IMPROVE: add Prefix+\ to split window vertical

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,7 @@ set-window-option -g window-status-current-style bg=green
 
 # 縦棒で縦分割,横棒で横分割
 bind | split-window -h
+bind \\ split-window -h
 bind - split-window -v
 
 # Vi キーバインド
