IMPROVE: add Prefix+r to reload .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,3 +41,6 @@ set-option -g history-limit 10000
 
 # OS specific settings
 #if-shell "uname | grep -q Darwin" "source-file .tmux.conf.osx"
+
+# reload .tmux.conf with 'prefix+r'
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
