--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -1,3 +1,4 @@
+tap "1password/tap"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
@@ -6,16 +7,18 @@ brew "ansible"
 brew "arping"
 brew "glib"
 brew "cmatrix"
+brew "colordiff"
 brew "gmp"
 brew "coreutils"
 brew "exiftool"
 brew "fdupes"
 brew "gnutls"
-brew "gobject-introspection"
 brew "harfbuzz"
 brew "srt"
 brew "ffmpeg"
 brew "fping"
+brew "gh"
+brew "git"
 brew "htop"
 brew "libheif"
 brew "imagemagick"
@@ -42,22 +45,26 @@ brew "reattach-to-user-namespace"
 brew "rename"
 brew "sshuttle"
 brew "telnet"
+brew "tig"
 brew "tldr"
 brew "tmux"
 brew "tree"
 brew "wget"
 brew "yarn"
 brew "yt-dlp"
+brew "zsh-completions"
 cask "1password"
-cask "boostnote"
+cask "1password-cli"
 cask "discord"
-cask "firefox"
+cask "fujitsu-scansnap-home"
 cask "google-chrome"
 cask "hammerspoon"
 cask "iterm2"
 cask "karabiner-elements"
 cask "mactex-no-gui"
-cask "mono-mdk-for-visual-studio"
+cask "microsoft-auto-update"
+cask "microsoft-office"
+cask "microsoft-remote-desktop"
 cask "slack"
 cask "tor-browser"
 cask "visual-studio-code"
