--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -63,7 +63,7 @@ cask "karabiner-elements"
 cask "mactex-no-gui"
 cask "microsoft-auto-update"
 cask "microsoft-office"
-cask "microsoft-remote-desktop"
+cask "windows-app"
 cask "notion"
 cask "nvidia-geforce-now"
 cask "slack"
