--- a/vim/dein.toml
+++ b/vim/dein.toml
@@ -26,3 +26,7 @@ desc = "An extensible & universal comment vim-plugin that also handles embedded 
 [[plugins]]
 repo = 'airblade/vim-gitgutter'
 desc = "A Vim plugin which shows a git diff in the gutter (sign column) and stages/undoes hunks"
+
+[[plugins]]
+repo = 'w0rp/ale'
+desc = "Asynchronous Lint Engine for Vim and NeoVim with support for many languages"
