--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -3,6 +3,7 @@ tap "homebrew/bundle"
 tap "homebrew/services"
 brew "ansible"
 brew "arping"
+brew "fd"
 brew "glib"
 brew "cmatrix"
 brew "colordiff"
