FIX: comment out scansnap because it doesn't support Apple Silicon natively

--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -56,7 +56,7 @@ cask "1password"
 cask "1password-cli"
 cask "chatgpt"
 cask "discord"
-cask "fujitsu-scansnap-home"
+# cask "fujitsu-scansnap-home"
 cask "google-chrome"
 cask "hammerspoon"
 cask "iterm2"
