--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -63,6 +63,7 @@ cask "karabiner-elements"
 cask "mactex-no-gui"
 cask "microsoft-auto-update"
 cask "microsoft-office"
+cask "microsoft-teams"
 cask "windows-app"
 cask "notion"
 cask "nvidia-geforce-now"
