--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -40,9 +40,9 @@ brew "pyenv"
 brew "reattach-to-user-namespace"
 brew "rename"
 brew "sshuttle"
+brew "tealdeer"
 brew "telnet"
 brew "tig"
-brew "tldr"
 brew "tmux"
 brew "tree"
 brew "wget"
