ADD: raycast settings

--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -61,6 +61,7 @@ cask "mactex-no-gui"
 cask "microsoft-auto-update"
 cask "microsoft-office"
 cask "microsoft-teams"
+cask "raycast"
 cask "windows-app"
 cask "notion"
 cask "nvidia-geforce-now"
